@@ -923,6 +923,18 @@ Usage    : PRAY EMBER [TARGET NAME]\n\r\
 Example  : pray ember bob\n\r\
 The caster causes a small flaming ember to appear and attack the target.
 
+EMPOWER_HOLY_ARMOR=PRAYER_EMPOWERHOLYARMOR
+PRAYER_EMPOWER_HOLY_ARMOR=PRAYER_EMPOWERHOLYARMOR
+PRAYER_EMPOWERHOLYYARMOR=<ABILITY>\
+Usage    : PRAY "EMPOWER HOLY ARMOR" [TARGET NAME]\n\r\
+Example  : pray "empower holy armor" helmet\n\r\
+This prayer causes armor to become permanently empowered and magical. \
+Empowered Armor has improved attack and damage bonuses, \
+is bound to worshippers of the caster`s deity, and becomes GOOD aligned.  \
+This prayer is very draining on the caster, however, causing the caster \
+to lose 50 experience points.  The caster must also be at full mana \
+to cast.
+
 EMPOWER_HOLY_WEAPON=PRAYER_EMPOWERHOLYWEAPON
 PRAYER_EMPOWER_HOLY_WEAPON=PRAYER_EMPOWERHOLYWEAPON
 PRAYER_EMPOWERHOLYWEAPON=<ABILITY>\
@@ -971,14 +983,38 @@ This prayer is very draining on the caster, however, causing the caster \
 to lose 50 experience points.  The caster must also be at full mana \
 to cast.
 
+EMPOWER_SACRED_ARMOR=PRAYER_EMPOWERSACREDARMOR
+PRAYER_EMPOWER_SACRED_ARMOR=PRAYER_EMPOWERSACREDARMOR
+PRAYER_EMPOWERSACREDYARMOR=<ABILITY>\
+Usage    : PRAY "EMPOWER SACRED ARMOR" [TARGET NAME]\n\r\
+Example  : pray "empower sacred armor" helmet\n\r\
+This prayer causes armor to become permanently empowered and magical. \
+Empowered Armor has improved attack and damage bonuses, \
+is bound to worshippers of the caster`s deity, and becomes NEUTRAL aligned.  \
+This prayer is very draining on the caster, however, causing the caster \
+to lose 50 experience points.  The caster must also be at full mana \
+to cast.
+
 EMPOWER_SACRED_WEAPON=PRAYER_EMPOWERSACREDWEAPON
-PRAYER_EMPOWER_UNHOLY_WEAPON=PRAYER_EMPOWERSACREDWEAPON
+PRAYER_EMPOWER_SACRED_WEAPON=PRAYER_EMPOWERSACREDWEAPON
 PRAYER_EMPOWERSACREDYWEAPON=<ABILITY>\
 Usage    : PRAY "EMPOWER SACRED WEAPON" [TARGET NAME]\n\r\
 Example  : pray "empower sacred weapon" sword\n\r\
 This prayer causes a weapon to become permanently empowered and magical. \
 Empowered Weapons have improved attack and damage bonuses, \
 be bound to worshippers of the caster`s deity, and become NEUTRAL aligned.  \
+This prayer is very draining on the caster, however, causing the caster \
+to lose 50 experience points.  The caster must also be at full mana \
+to cast.
+
+EMPOWER_UNHOLY_ARMOR=PRAYER_EMPOWERUNHOLYARMOR
+PRAYER_EMPOWER_UNHOLY_ARMOR=PRAYER_EMPOWERUNHOLYARMOR
+PRAYER_EMPOWERUNHOLYYARMOR=<ABILITY>\
+Usage    : PRAY "EMPOWER UNHOLY ARMOR" [TARGET NAME]\n\r\
+Example  : pray "empower unholy armor" helmet\n\r\
+This prayer causes armor to become permanently empowered and magical. \
+Empowered Armor has improved attack and damage bonuses, \
+is bound to worshippers of the caster`s deity, and becomes EVIL aligned.  \
 This prayer is very draining on the caster, however, causing the caster \
 to lose 50 experience points.  The caster must also be at full mana \
 to cast.
